--- a/public/style.css
+++ b/public/style.css
@@ -48,7 +48,7 @@ body{
     justify-content: center;
     background-color:rgb(15, 15, 15);
     width: fit-content;
-    margin: 20px auto;
+    margin: 10vh auto;
     padding:0px  20px;
     border-radius: 20px;
 
